--- a/source/processor.ipynb
+++ b/source/processor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "                    \"neighbourhood\": \"\",\n",
     "                    \"gps_lat\": \"\",\n",
     "                    \"gps_lon\": \"\",\n",
-    "                    \"address\": \"\"\n",
+    "                    \"address\": \"\",\n",
     "                }\n",
     "                \n",
     "                buffer[\"name_indo\"] = row[1].strip()\n",
@@ -69,7 +69,8 @@
     "                buffer[\"gps_lat\"] = parse_dms(lat)\n",
     "\n",
     "                address = row[6]\n",
-    "\n",
+    "                \n",
+    "                print(row[7])\n",
     "            else:\n",
     "                buffer[\"neighbourhood\"] = row[1].strip()\n",
     "                buffer[\"name_pinyin\"] = row[2].strip()\n",
@@ -94,9 +95,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " DONE \n",
+      " DONE \n",
+      " DONE \n",
+      "\n",
+      "\n",
+      "\n",
+      " DONE \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " BUDDHAYANA \n",
+      " NICIREN SYOSYU \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " Kompleks Bengkel \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " DONE \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " DONE \n",
+      "\n",
+      " Depan Hotel RAJAWALI \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " Atas rumah lantai 3 \n",
+      "\n",
+      "\n",
+      "\n",
+      " BUDDHAYANA \n",
+      " BUDDHAYANA \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " MAITREYA \n",
+      "\n",
+      " KONGHUCU \n",
+      "\n",
+      " BUDDHAYANA \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " DONE \n",
+      "\n",
+      " Depan Hotel RAJAWALI \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " Contact Person :  \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " MAITREYA \n",
+      " A Thiam (Majelis Konghucu) \n",
+      " A Thiam (Majelis Konghucu) \n",
+      "\n",
+      "\n",
+      " Pengurus : Ah Ku, samping \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " Kawasan Perkuburan Kongsi \n",
+      " Narasumber wawancara \n",
+      "\n",
+      " Anak buah Fam Lon ke-1 \n",
+      " Anak buah Fam Lon ke-2 \n",
+      " Pemilik awal Almarhum Fam Lon \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " MAITREYA \n",
+      " Kompleks Villa \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " MAITREYA \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " BUDDHAYANA \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " Tidak digunakan \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " Pengurus Bong Sin Jung \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " Pemilik Bun Ali \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "parse_csv(\"raw_barat.csv\", \"1_West.csv\")\n",
     "parse_csv(\"raw_tengah.csv\", \"1_Central.csv\")\n",
