processor spits out combined .geojson

--- a/source/processor.ipynb
+++ b/source/processor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "    return [d, m, sd]\n",
     "\n",
     "def parse_dms(dms):\n",
-    "    parts = re.split('[º°\\'\",]+', dms)\n",
+    "    parts = re.split('[º°\\'\",.]+', dms)\n",
     "    lat = dms2dd(parts[0], parts[1], parts[2], parts[3])\n",
     "\n",
     "    return (lat)"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,7 @@
     "                    \"gps_lat\": \"\",\n",
     "                    \"gps_lon\": \"\",\n",
     "                    \"address\": \"\",\n",
+    "                    \"ref_no\": \"\"\n",
     "                }\n",
     "                \n",
     "                buffer[\"name_indo\"] = row[1].strip()\n",
@@ -70,7 +71,7 @@
     "\n",
     "                address = row[6]\n",
     "                \n",
-    "                print(row[7])\n",
+    "                buffer[\"ref_no\"] = row[7]\n",
     "            else:\n",
     "                buffer[\"neighbourhood\"] = row[1].strip()\n",
     "                buffer[\"name_pinyin\"] = row[2].strip()\n",
@@ -95,291 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " DONE \n",
-      " DONE \n",
-      " DONE \n",
-      "\n",
-      "\n",
-      "\n",
-      " DONE \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " BUDDHAYANA \n",
-      " NICIREN SYOSYU \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " Kompleks Bengkel \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " DONE \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " DONE \n",
-      "\n",
-      " Depan Hotel RAJAWALI \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " Atas rumah lantai 3 \n",
-      "\n",
-      "\n",
-      "\n",
-      " BUDDHAYANA \n",
-      " BUDDHAYANA \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " MAITREYA \n",
-      "\n",
-      " KONGHUCU \n",
-      "\n",
-      " BUDDHAYANA \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " DONE \n",
-      "\n",
-      " Depan Hotel RAJAWALI \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " Contact Person :  \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " MAITREYA \n",
-      " A Thiam (Majelis Konghucu) \n",
-      " A Thiam (Majelis Konghucu) \n",
-      "\n",
-      "\n",
-      " Pengurus : Ah Ku, samping \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " Kawasan Perkuburan Kongsi \n",
-      " Narasumber wawancara \n",
-      "\n",
-      " Anak buah Fam Lon ke-1 \n",
-      " Anak buah Fam Lon ke-2 \n",
-      " Pemilik awal Almarhum Fam Lon \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " MAITREYA \n",
-      " Kompleks Villa \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " MAITREYA \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " BUDDHAYANA \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " Tidak digunakan \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " Pengurus Bong Sin Jung \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      " Pemilik Bun Ali \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "parse_csv(\"raw_barat.csv\", \"1_West.csv\")\n",
     "parse_csv(\"raw_tengah.csv\", \"1_Central.csv\")\n",
@@ -390,7 +109,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compile changes into a single csv\n",
+    "\n",
+    "array = [\n",
+    "    [\"1_West.csv\", \"west\"],\n",
+    "    [\"1_Central.csv\", \"central\"],\n",
+    "    [\"1_South.csv\", \"South\"],\n",
+    "    [\"1_East.csv\", \"East\"],\n",
+    "    [\"1_North.csv\", \"North\"]\n",
+    "]\n",
+    "\n",
+    "outlist = [\n",
+    "    \n",
+    "]\n",
+    "\n",
+    "for entry in array:\n",
+    "    with open(entry[0]) as csvfile:\n",
+    "        reader = csv.reader(csvfile)\n",
+    "        \n",
+    "        next(reader, None)\n",
+    "        \n",
+    "        for line in reader:\n",
+    "            outlist.append({\n",
+    "                \"name_indo\": line[0],\n",
+    "                \"name_hanzi\": line[1],\n",
+    "                \"name_pinyin\": line[2],\n",
+    "                \"neighbourhood\": line[3],\n",
+    "                \"gps_lat\": line[4],\n",
+    "                \"gps_lon\": line[5],\n",
+    "                \"address\": line[6],\n",
+    "                \"ref_no\": line[7],\n",
+    "                \"region\": entry[1]\n",
+    "            })\n",
+    "          \n",
+    "keys = outlist[0].keys()\n",
+    "with open(\"2_combined.csv\", 'w', newline='', encoding='utf-8')  as output_file:\n",
+    "            dict_writer = csv.DictWriter(output_file, keys)\n",
+    "            dict_writer.writeheader()\n",
+    "            dict_writer.writerows(outlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +170,7 @@
     "        reader = csv.reader(csvfile, delimiter=',')\n",
     "        next(reader, None)\n",
     "        \n",
-    "        for name_indo, name_hanzi, name_pinyin, neighbourhood, gps_lat, gps_lon, address in reader:\n",
+    "        for name_indo, name_hanzi, name_pinyin, neighbourhood, gps_lat, gps_lon, address,ref_no,region in reader:\n",
     "            latitude, longitude = map(float, (gps_lat, gps_lon))\n",
     "            \n",
     "            features.append(\n",
@@ -418,7 +183,9 @@
     "                        'neighbourhood': neighbourhood,\n",
     "                        'gps_lat': gps_lat,\n",
     "                        'gps_lon': gps_lon,\n",
-    "                        'address': address\n",
+    "                        'address': address,\n",
+    "                        \"ref_no\": ref_no,\n",
+    "                        \"region\": region\n",
     "                    }\n",
     "                )\n",
     "            )\n",
@@ -431,15 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_to_geojson(\"1_West.csv\", \"2_West.geojson\")\n",
-    "csv_to_geojson(\"1_Central.csv\", \"2_Central.geojson\")\n",
-    "csv_to_geojson(\"1_South.csv\", \"2_South.geojson\")\n",
-    "csv_to_geojson(\"1_East.csv\", \"2_East.geojson\")\n",
-    "csv_to_geojson(\"1_North.csv\", \"2_North.geojson\")"
+    "csv_to_geojson(\"2_combined.csv\", \"3_combined.geojson\")\n"
    ]
   },
   {
